ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-world-app-service
                port:
                  number: 8080
          - path: /landing
            pathType: Prefix
            backend:
              service:
                name: landing-page-service
                port:
                  number: 80
          - path: /mysql
            pathType: Prefix
            backend:
              service:
                name: mysql-db-service
                port:
                  number: 3306
